--- a/css/exercice.css
+++ b/css/exercice.css
@@ -5,12 +5,21 @@
 
 /* 2. exercice-direction-1 */
 .exercice-direction-1 .container {
+  display: flex;
   flex-direction: column;
 }
 
 /* 3. exercice-direction-2 */
+.exercice-direction-2 .container {
+  display: flex;
+  flex-direction: column-reverse;
+}
 
 /* 4. exercice-direction-2 */
+.exercice-direction-3 .container {
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 /* 5. exercice-wrap-1 */
 
