--- a/css/exercice.css
+++ b/css/exercice.css
@@ -22,6 +22,10 @@
 }
 
 /* 5. exercice-wrap-1 */
+.exercice-wrap-1 .container {
+  display: flex;
+  flex-direction: row;
+}
 
 /* 6. exercice-wrap-2 */
 
