--- a/css/exercice.css
+++ b/css/exercice.css
@@ -28,6 +28,10 @@
 }
 
 /* 6. exercice-wrap-2 */
+.exercice-wrap-2 .container {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 /* 7. exercice-wrap-3 */
 
