--- a/css/exercice.css
+++ b/css/exercice.css
@@ -34,6 +34,11 @@
 }
 
 /* 7. exercice-wrap-3 */
+.exercice-wrap-3 .container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+}
 
 /* 8. all-in */
 
