--- a/css/exercice.css
+++ b/css/exercice.css
@@ -41,4 +41,9 @@
 }
 
 /* 8. all-in */
+.exercice-all-in .container {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap-reverse;
+}
 
